# VAMR

./: .gitignore  README.md  cli.py  dockerfile  gdbinit  requirements.txt
.devcontainer/: devcontainer.json
docker_extra/: readme.md
exercises/: CMakeLists.txt  camera_model.cpp  camera_model.hpp  counting_iterator.hpp  eigenMatrix.cpp  exercise01.cpp  exercise02.cpp  exercise03.cpp  exercise04.cpp  exercise05.cpp  exercise06.cpp  exercise07.cpp  folder_manager.cpp  folder_manager.hpp  image_gradient.cpp  image_gradient.hpp  matlab_like.cpp  matlab_like.hpp  ransac.cpp  ransac.hpp  sift.cpp  sift.hpp  stereo_reconst.cpp  stereo_reconst.hpp  two_view_geometry.cpp  two_view_geometry.hpp  utils.cpp  utils.hpp  viz3d_practice.cpp
exercises/camera_model/: CMakeLists.txt  camera_model.cu  camera_model.hpp
exercises/keypoint_tracking/: CMakeLists.txt  keypoint_tracking.cpp  keypoint_tracking.cu  keypoint_tracking.hpp
exercises/pnp_dlt/: CMakeLists.txt  pnp_dlt.cpp  pnp_dlt.hpp
exercises/practices/: bunny.ply  imageBasics.cpp
exercises/practices/cuda_practice/: CMakeLists.txt  cuda_lib.cu  cuda_lib.cuh  cuda_lib.hpp  main.cpp  using_lib.cpp  using_lib.hpp
exercises/statements/Exercise 2 - PnP/: motion.wmv
exercises/statements/Exercise 2 - PnP/code/: quatQ.m
exercises/tests/: CMakeLists.txt  test_keypoint_tracking.cpp  test_matlab_like.cpp  test_ransac.cpp  test_sift.cpp  test_stereo_reconst.cpp  test_two_view_geometry.cpp  test_utils.cpp
exercises/tools/: CMakeLists.txt  folder_manager.cpp  utils.cpp  utils.cu  utils.cuh  utils.hpp
exercises/utils/: CMakeLists.txt  cuda_types.cpp  cuda_types.cu  cuda_types.cuh  cuda_types.hpp  operations.cpp  operations.cu  operations.cuh  operations.hpp  utils.cpp  utils.cu  utils.cuh  utils.hpp
